tests/miniJava/neg/004502_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( public { return 0 ; } }
